--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -1,7 +1,36 @@
-.main {
+.page {
   background: #fbf7ed;
   width: 100vw;
   height: 100vh;
   margin: 0;
   padding: 0;
+}
+.header {
+  display: flex;
+  width: 100%;
+  height: 60px;
+  align-items: center;
+  border-bottom: 1px solid #eee;
+}
+.logo {
+  margin-left: 30px;
+display: flex;
+align-items: center;
+font-size: 26px;
+cursor: pointer;
+}
+.search {
+  width: 80%;
+}
+.title {
+  font-size: 32px;
+  text-align: center;
+  padding: 50px 0;
+}
+.search-box {
+  display: flex;
+  justify-content: center;
+}
+.box-mian {
+  width: 50%;
 }
