--- a/src/pages/Search/index.css
+++ b/src/pages/Search/index.css
@@ -1,20 +1,10 @@
 .search-main {
   padding-left: 20px;
-  height: 80px;
-  width: 100%;
-  border-bottom: 1px solid #eee;
   display: flex;
   align-items: center;
 }
-.logo {
-margin-right: 10px;
-display: flex;
-align-items: center;
-font-size: 28px;
-cursor: pointer;
-}
 .search-input {
-  width: 80%;
+  width: 100%;
   height: 34px;
   display: flex;
 }
@@ -24,6 +14,6 @@ cursor: pointer;
   margin-right: 10px;
 }
 .search-btn {
- 
+ margin-left: 10px;
   border-color: #ccc !important;
 }
